--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ header {
     padding-top: 8px;
     padding-bottom: 8px;
     font-size: 1em;
-    background-color: #CA09D7;
+    background-color: hwb(296 4% 16%);
     color: #fff;
 }
 button {
@@ -136,6 +136,12 @@ button {
 }
 button:hover {
     background-color: hwb(296 4% 50%);
+}
+.BottomCTALinks .Filled:hover {
+    background-color: hwb(296 4% 50%);
+}
+.BottomCTALinks .Unfilled:hover {
+    background-color: hwb(199 18% 72%);
 }
 .PrimaryButtonWithBorder {
     font-family: "Exo 2", sans-serif;
@@ -176,6 +182,9 @@ button:hover {
 .Link {
     font-weight: 600;
     color: #CA09D7;
+}
+.Link:hover {
+color: hwb(296 4% 50%);
 }
 .Heading1 {
     font-family: "Goldman", sans-serif;
@@ -245,12 +254,18 @@ button:hover {
     gap: 1em;
     margin-top: 56px;
     margin-bottom: 56px;
+    
+}
+.BottomCTALinks .Filled {
+    background-color: #CA09D7;
+    color: #fff;
 }
 .BottomCTALinks a {
     display: flex;
     justify-content: space-between;
     background-color: #4F6D7A;
     color: #fff;
+    border: #000 2px solid;
 }
 .BottomCTAText {
     display: flex;
@@ -267,7 +282,7 @@ button:hover {
     margin: 0;
 }
 .BottomCTAIcon {
-    background-color: #CA09D7;
+   
     padding: 1em;
     display: flex;
     align-items: center;
