--- a/styles.css
+++ b/styles.css
@@ -334,7 +334,7 @@ footer p {
 } */
 .SocialMediaIconGroup {
     display: flex;
-    gap: .6em;
+    gap: 1em;
 }
 .SocialMediaIcon {
     max-width: 40px;
