--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,19 @@ h1 span {
     border: #CA09D7 solid 2px;
     width: 100%;
 }
+.SecondaryButtonInactive {
+    display: block;
+    color: #CA09D7;
+    padding: 14px 24px;
+    text-decoration: none;
+    font-weight: 700;
+    text-align: center;
+    border: #CA09D7 solid 2px;
+    width: 100%;
+    opacity: 50%;
+    cursor:not-allowed;
+}
+
 .SecondaryButton:hover {
     background-color: #7C0585;
     color: #fff;
@@ -110,6 +123,7 @@ main, .HeroContent {
 }
 .HeroContent h2 {
     width: 70%;
+    line-height: 130%;
 }
 .MainContent {
     display: flex;
