--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,7 @@ footer {
     .InfoSection {
         display: flex;
         flex-direction: column;
-        gap: .5rem;
+        gap: 1.5rem;
     }
     .ContentCard {
         display: flex;
@@ -306,7 +306,6 @@ footer {
     box-shadow: #F6F4F6 0px 10px 5px;
     margin: 0;
     position: relative;
-    justify-content: space-between;
     display: flex;
     /* padding-left: calc(5vw + 1em);
     padding-right: 5vw; */
@@ -314,22 +313,34 @@ footer {
     padding-bottom: .5  rem;
     /*box-shadow: 0px 8px 32px -8px #000;*/
     align-items: center;
-    padding-left: 2rem;
+    padding: 0 2rem;
     
 }
 .NavBarImage {
     width: fit-content;
 }
+.MobileNav {
+   width: inherit;
+   display: none;
+   flex-direction: row;
+   justify-content: space-between;
+   padding-right:2rem;
+   flex-direction: row;
+   padding-top: 5px;
+}
+
 
 @media only screen and (max-width: 900px) {
     .NavBar {
-        justify-content:center;
-        padding-left: 0;
+        display: block;
+        flex-direction: row;
+        justify-content:space-between;
+        /* padding-left: 0; */
     }
     .NavBarImage img {
         max-width: 250px;
     }
-
+   
 }
 
 @media only screen and (max-width: 500px) {
@@ -343,6 +354,13 @@ footer {
         width: 50%;
         height: auto;
     }
+    .MobileNav {
+        /* display: flex;         */
+     }
+     .NavBarImage {
+        /* display:none; */
+    }
+
 }
 
 .NavBarImage img {
