--- a/styles.css
+++ b/styles.css
@@ -313,7 +313,7 @@ footer {
     padding-bottom: .5  rem;
     /*box-shadow: 0px 8px 32px -8px #000;*/
     align-items: center;
-    padding: 0 2rem;
+    padding: 1rem 2rem;
     
 }
 .NavBarImage {
